# EmulationRendererLib

./: CMakeLists.txt
cmake/: ffmpeg.cmake
include/EmulationRendererLib/core/: EmulationRendererLib.h
src/EmulationRendererLib/core/: EmulationRendererLib.cpp
